Kubernetes/app-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: phone-shop-app-statefulset
spec:
  serviceName: "phone-shop-app"
  replicas: 1
  selector:
    matchLabels:
      app: phone-shop-app
  template:
    metadata:
      labels:
        app: phone-shop-app
    spec:
      containers:
      - name: phone-shop-app
        image: sirihate/phoneshop-app:latest
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
  volumeClaimTemplates:
  - metadata:
      name: phone-shop-app-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
