Kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phone-shop-app-service
spec:
  selector:
    app: phone-shop-app
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
